--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,8 +43,7 @@
         "ms-python.python",
         "ms-python.debugpy",
         "ms-python.vscode-pylance",
-        "ms-python.pylint",
-        "ms-python.vscode-python-envs"
+        "ms-python.pylint"
       ]
     }
   },
