--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,24 +1,27 @@
 {
   "recommendations": [
-    "McCarter.start-git-bash",
-    "yy0931.vscode-sqlite3-editor",
-    "medo64.render-crlf",
-    "ecmel.vscode-html-css",
-    "ms-vscode.js-debug",
-    "esbenp.prettier-vscode",
-    "miramac.vscode-exec-node",
-    "oderwat.indent-rainbow",
-    "ritwickdey.LiveServer",
-    "mathematic.vscode-pdf",
-    "GitHub.codespaces",
-    "yahyabatulu.vscode-markdown-alert",
-    "bierner.markdown-preview-github-styles",
-    "mechatroner.rainbow-csv",
     "bierner.markdown-mermaid",
-    "ms-python.python",
+    "bierner.markdown-preview-github-styles",
+    "ecmel.vscode-html-css",
+    "esbenp.prettier-vscode",
+    "GitHub.codespaces",
+    "mathematic.vscode-pdf",
+    "McCarter.start-git-bash",
+    "mechatroner.rainbow-csv",
+    "medo64.render-crlf",
+    "miramac.vscode-exec-node",
+    "ms-python.black-formatter",
     "ms-python.debugpy",
-    "ms-python.vscode-pylance",
     "ms-python.pylint",
+    "ms-python.python",
+    "ms-vscode.js-debug",
+    "oderwat.indent-rainbow",
+    "yahyabatulu.vscode-markdown-alert",
+    "oderwat.indent-rainbow",
+    "streetsidesoftware.code-spell-checker",
+    "tal7aouy.icons",
+    "yahyabatulu.vscode-markdown-alert",
+    "yy0931.vscode-sqlite3-editor",  
     "ms-python.vscode-python-envs"
   ]
 }
