--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
   },
   "waitFor": "onCreateCommand",
   "updateContentCommand": "",
-  "postCreateCommand": "pip install -r requirements_python.txt && apt-get clean && rm -rf /root/.cache/pip",
+  "postCreateCommand": "pip install -r requirements_python.txt && npm install requirements_node.txt && apt-get clean && rm -rf /root/.cache/pip",
   "postStartCommand": "",   // For commands to run each Codespace start
   "customizations": {
     "vscode": {
